adding: scroll for the main screen fixed: some bugs

--- a/YoutubeAPI/Base.lproj/Main.storyboard
+++ b/YoutubeAPI/Base.lproj/Main.storyboard
@@ -31,6 +31,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="0Wp-tv-BHC">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.113761507" green="0.1048973277" blue="0.150441885" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
